--- a/css/center.css
+++ b/css/center.css
@@ -82,7 +82,7 @@
 .showInfoLeftimg {
 	width: 380px;
 	height: 250px;
-	animation: switch 3s ease-in-out infinite;
+	/* animation: switch 3s ease-in-out infinite; */
 }
 @keyframes switch {
 	0%, 40% {
@@ -99,32 +99,30 @@
 .showInfoRight {
 	padding-top: 12px;
 	width: 460px;
+	flex-direction: column;
+    display: flex;
 }
 .new-detail-head {
-    height: 22px;
-    line-height: 22px;
-    width: 205px;
+	height: auto;
     margin-left: 10px;
-	display: inline-block;
+	display: flex;
+	margin-bottom: 5px;
 }
 
 .new-detail-head .new-detail-label {
-    width: 90px;
-    height: 100%;
+    width: 152px;
+    height: 20px;
     background: #f5f8fa;
     color: #666666;
     text-align: right;
     display: inline-block;
-	vertical-align: top;
+    vertical-align: top;
 }
 .new-detail-head .new-detail-field {
-    width: 82px;
-    height: 100%;
+	height: 100%;
+	width: 100%;
     margin-left: 10px;
     display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-	white-space: nowrap;
 }
 
 .pulspic{
@@ -251,3 +249,89 @@
 .sub:hover {
 	background: #eee;
 }
+
+.treeSearch {
+	display: flex;
+	align-items: center;
+	padding: 12px 24px;
+	justify-content: space-between;
+	background-color: #F8F8F8;
+}
+
+.treeSearch input {
+	height: 32px;
+	padding: 12px;
+	outline: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+    border-top-width: 1.02px;
+}
+.seachQueqy {
+	line-height: 32px;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 0 15px;
+    font-size: 14px;
+    border-radius: 4px;
+    height: 32px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    position: relative;
+    -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+    background-color: #fff;
+	border-color: #d9d9d9;
+	color: #fff;
+    background-color: #1890ff;
+    border-color: #1890ff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045)
+}
+.seachRest {
+	line-height: 32px;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 0 15px;
+    font-size: 14px;
+    border-radius: 4px;
+    height: 32px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    position: relative;
+    -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+	color: rgba(0, 0, 0, 0.65);
+	border-color: #d9d9d9;
+}
+
