--- a/css/center.css
+++ b/css/center.css
@@ -335,3 +335,42 @@
 	border-color: #d9d9d9;
 }
 
+.colorItem {
+ display: flex;
+ align-items: center;
+ /* margin-bottom: 3px; */
+}
+.colorBox {
+	width: 10px;
+	height: 10px;
+}
+
+.colorBox1 {
+	background-color: #92D050;
+}
+
+.colorBox2 {
+	background-color: #9CC3E6;
+}
+
+.colorBox3 {
+	background-color: #FFC000;
+}
+
+.colorBox4 {
+	background-color: #FF0000;
+}
+.colorContent {
+	display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 5px;
+    background-color: #F8F8F8;
+}
+
+.colorName {
+	font-size: 12px;
+    color: #444;
+    margin-left: 4px;
+    line-height: 10px
+}
