--- a/css/tree.css
+++ b/css/tree.css
@@ -81,7 +81,7 @@
     overflow-y: scroll;
     overflow-x: scroll;
     position: relative;
-    background-color: #eee;
+    /* background-color: #eee; */
     padding-right: 10px;
     font-size: 14px;
     color: #444;
