--- a/css/tree.css
+++ b/css/tree.css
@@ -75,14 +75,15 @@
 .tree {
     width: 100%;
     height: 600px;
-    padding: 12px 0;
+    /* padding: 12px 0; */
+    padding: 5px 10px;
     display: block;
     margin: auto;
     overflow-y: scroll;
     overflow-x: scroll;
     position: relative;
     /* background-color: #eee; */
-    padding-right: 10px;
+    /* padding-right: 10px; */
     font-size: 14px;
     color: #444;
     border-top: 1px dashed #eee;
@@ -99,7 +100,7 @@
     list-style-type: none;
     margin-top: 0px;
     position: relative;
-    padding-inline-start: 24px;
+    padding-inline-start: 10px;
 }
 .unfold {
     display: inline-block;
