--- a/css/left.css
+++ b/css/left.css
@@ -47,6 +47,11 @@
 	border-color: #2698dd;
 }
 
+.btn-building1 {
+    background-color: #f0ad4e;
+    border-color: #eea236;
+}
+
 .btn-businessDistrict {
 	background-color: #5582f6;
     border-color: #5582f6;
