--- a/css/left.css
+++ b/css/left.css
@@ -1,16 +1,10 @@
-
-.operation-container {
-	width: 120px;
-}
-
 .operation-btn {
 	display: flex;
     align-items: center;
     flex-direction: column;
     cursor: pointer;
     justify-content: center;
-    margin-bottom: 10px;
-    /* padding: 16px; */
+	margin: 10px 0 0 10px;
     width: 96px;
     height: 72px;
     color: #fff;
@@ -111,14 +105,15 @@
 
 .treeBox {
 	position: fixed;
-	min-width: 350px;
-	top: 20px;
-	left: 135px;
-	display: none;
-	background: #fff;
-	overflow: hidden;
-	border-radius: 5px;
-	box-shadow: 1px 1px 3px #ccc;
+    min-width: 350px;
+    top: 91px;
+    height: 87%;
+    left: 10px;
+    display: none;
+    background: #fff;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px #ccc;
 }
 .treeBoxtitleBox {
 	display: flex;
