--- a/css/tree.css
+++ b/css/tree.css
@@ -74,8 +74,7 @@
 
 .tree {
     width: 100%;
-    height: 600px;
-    /* padding: 12px 0; */
+    height: 100%;
     padding: 5px 10px;
     display: block;
     margin: auto;
