--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,87 @@
+/*reset.css用来存储清除浏览器的样式 ,后面添加了一部分通用样式*/
+
+a { background-color: transparent; text-decoration: none;-webkit-tap-highlight-color:rgba(0,0,0,0) }
+a:hover { outline: none; text-decoration: none; }
+a,a:hover,a:active,a:visited,a:link,a:focus{
+-webkit-tap-highlight-color:rgba(0,0,0,0);
+-webkit-tap-highlight-color: transparent;
+outline:none;
+text-decoration: none;
+-webkit-tap-highlight-color:rgba(0,0,0,0);
+-webkit-user-modify: read-only;
+cursor: pointer;
+}
+
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td { margin: 0; padding: 0; }
+table { border-collapse: collapse; border-spacing: 0; }
+fieldset, img { border: 0; }
+address, caption, cite, code, dfn, em, strong, th, var, optgroup { font-style: inherit; font-weight: inherit; }
+del, ins { text-decoration: none; }
+li { list-style: none; }
+caption, th { text-align: left; }
+h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: normal; }
+q:before, q:after { content: ''; }
+abbr, acronym { border: 0; font-variant: normal; }
+sup { vertical-align: baseline; }
+sub { vertical-align: baseline; }
+/*because legend doesn't inherit in IE */
+legend { color: #000; }
+input, button, textarea, select, optgroup, option { font-family: inherit; font-size: inherit; font-style: inherit; font-weight: inherit; }
+button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
+/*@purpose To enable resizing for IE */
+/*@branch For IE6-Win, IE7-Win */
+input, button, textarea, select {
+*font-size: 100%; outline:none; }
+
+/*select*/
+select{
+/*复写Chrome和Firefox里面的边框*/
+border:1px solid green;
+/*清除默认样式*/
+appearance:none;
+-moz-appearance:none;
+-webkit-appearance:none;
+/*在选择框的最右侧中间显示小箭头图片*/
+/*background: url(../img/icon/icon_select.png) no-repeat scroll right center transparent;*/
+/*为下拉小箭头留出一点位置，避免被文字覆盖*/
+padding-right: 14px;
+}
+/*清除ie的默认选择框样式清除，隐藏下拉箭头*/
+select::-ms-expand { display: none; }
+
+/* 个人在后面添加了一些常用的公共样式 */
+/*居中效果*/
+.margin_center { margin: 0px auto; }
+/*浮动*/
+.float_left { float: left; }
+.float_right { float: right; }
+/*文字位置*/
+.text_center { text-align: center; }
+.text_left { text-align: left; }
+.text_right { text-align: right; }
+/*position*/
+.position_relative { position: relative; }
+.position_absolute { position: absolute; }
+/*边框*/
+.no_border { border: 0px!important;border-right: 0px!important; }
+/*宽度*/
+.width_whole { width: 100%; }
+/*清除格式*/
+.clear_both { clear: both; }
+.no_margin { margin: 0px!important; }
+/* 展示样式 */
+.display_block { display: block; }
+.display_none { display: none; }
+.visibility_hidden { visibility: hidden; }
+/*清除浮动*/
+.clearfix:after {content: "";display: block;height: 0;clear: both;visibility: hidden;}
+* html .clearfix{zoom:1;} /* IE6 */
+*+html .clearfix{zoom:1;} /* IE7 */
+
+body {
+font-family: 'PingFangSC','helvetica neue','hiragino sans gb','arial','microsoft yahei ui','microsoft yahei','simsun','sans-serif'!important;
+font-size: 10px;
+}
 .nav_container {
     position: fixed;
     right: .1rem;
@@ -159,4 +243,74 @@
 
 .seach_shoping input {
     width: 48%;
+}
+
+.footInfoList {
+    position: fixed;
+    background-color: #fff;
+    width: 100%;
+    height: 60%;
+    bottom: -60%;
+    /* bottom: 0%; */
+    left: 0;
+    transition: bottom 1s;
+    border-top-left-radius: .1rem;
+    border-top-right-radius: .1rem;
+    overflow: hidden;
+    z-index: 99;
+}
+
+.footInfoList ul {
+    padding: .05rem.1rem;
+    overflow: auto;
+    height: 100%;
+    position: relative;
+}
+
+.lodding_info {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.footInfoListTitle {
+    text-align: center;
+    border-bottom: .01rem solid #eee;
+    height: .3rem;
+    line-height: .3rem;
+    width: 100%;
+}
+
+.InfoItem .moreInfo {
+    font-size: .18rem;
+}
+
+.footInfoListTitleup {
+    display: none;
+}
+
+.InfoItem {
+    display: flex;
+    align-items: center;
+}
+
+.shopName {
+    flex: 2;
+}
+.addressName {
+    flex: 3;
+}
+
+.shopName, 
+.addressName {
+    font-size: .12rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.moreInfo {
+    margin-left: .1rem;
 }
